--- a/code/package.json
+++ b/code/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "client_wepy",
-  "version": "0.0.2",
-  "description": "A WePY project",
-  "main": "dist/app.js",
-  "scripts": {
-    "dev": "wepy build --watch",
-    "build": "cross-env NODE_ENV=production wepy build --no-cache",
-    "dev:web": "wepy build --output web",
-    "clean": "find ./dist -maxdepth 1 -not -name 'project.config.json' -not -name 'dist' | xargs rm -rf",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "wepy": {
-    "module-a": false,
-    "./src/components/list": "./src/components/wepy-list.wpy"
-  },
-  "author": "waaaly <825887013@qq.com>",
-  "license": "MIT",
-  "dependencies": {
-    "node-sass": "^4.12.0",
-    "sass": "^1.23.0",
-    "start": "^5.1.0",
-    "wepy": "^1.7.2",
-    "wepy-async-function": "^1.4.7",
-    "wepy-com-toast": "^1.0.2"
-  },
-  "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.3",
-    "less": "^3.10.3",
-    "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10",
-    "wepy-compiler-sass": "^1.3.12",
-    "wepy-plugin-imagemin": "^1.5.3",
-    "wepy-plugin-uglifyjs": "^1.3.7"
-  }
+    "name": "client_wepy",
+    "version": "0.0.2",
+    "description": "A WePY project",
+    "main": "dist/app.js",
+    "scripts": {
+        "dev": "wepy build --watch",
+        "build": "cross-env NODE_ENV=production wepy build --no-cache",
+        "dev:web": "wepy build --output web",
+        "clean": "find ./dist -maxdepth 1 -not -name 'project.config.json' -not -name 'dist' | xargs rm -rf",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "wepy": {
+        "module-a": false,
+        "./src/components/list": "./src/components/wepy-list.wpy"
+    },
+    "author": "waaaly <825887013@qq.com>",
+    "license": "MIT",
+    "dependencies": {
+        "net": "^1.0.2",
+        "node-sass": "^4.13.0",
+        "nodejs-websocket": "^1.7.2",
+        "sass": "^1.23.7",
+        "start": "^5.1.0",
+        "wechat-mini-programs-apis": "^1.6.2",
+        "wepy": "^1.7.2",
+        "wepy-async-function": "^1.4.7",
+        "wepy-com-toast": "^1.0.2"
+    },
+    "devDependencies": {
+        "babel-eslint": "^7.2.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-export-extensions": "^6.22.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "cross-env": "^5.1.3",
+        "gulp": "^3.9.1",
+        "less": "^3.10.3",
+        "wepy-compiler-babel": "^1.5.1",
+        "wepy-compiler-less": "^1.3.10",
+        "wepy-compiler-sass": "^1.3.12",
+        "wepy-plugin-imagemin": "^1.5.3",
+        "wepy-plugin-uglifyjs": "^1.3.7"
+    }
 }
