1、修复优惠券使用， 2、新增清除缓存功能, 3、新增商家页商家码
Signed-off-by: waaaly <825887013@qq.com>

--- a/code/package.json
+++ b/code/package.json
@@ -17,11 +17,15 @@
     "author": "waaaly <825887013@qq.com>",
     "license": "MIT",
     "dependencies": {
+        "crypto": "^1.0.1",
+        "events": "^3.0.0",
         "net": "^1.0.2",
         "node-sass": "^4.13.0",
         "nodejs-websocket": "^1.7.2",
         "sass": "^1.23.7",
         "start": "^5.1.0",
+        "tls": "0.0.1",
+        "url": "^0.11.0",
         "util": "^0.12.1",
         "wechat-mini-programs-apis": "^1.6.2",
         "wepy": "^1.7.2",
