1、优化iphone的icon显示，版本为V0.3.2
Signed-off-by: waaaly <825887013@qq.com>

--- a/code/project.config.json
+++ b/code/project.config.json
@@ -7,7 +7,7 @@
         "minified": false
     },
     "compileType": "miniprogram",
-    "appid": "wx6be14b9c1bbe7bc0",
+    "appid": " ",
     "projectname": "大学若邻",
     "miniprogramRoot": "dist/",
     "simulatorType": "wechat",
